# tmp_repo

./: .gitignore
async/: TODOLIST.txt  exec  main2.cpp
async/threading/: Producer.cpp
cpp/async/: Makefile  main.cpp  main3.cpp
cpp/custom_containers/: .gitignore  README.md  _TODOLIST.txt  sh_backup.sh  sh_run.sh
cpp/custom_containers/scripts/: sh_build_with_cmake.sh
cpp/custom_containers/src/: dynamic_heap_array.hpp  static_array.hpp  weak_ref_data_pool.hpp
cpp/custom_containers/tests/: .gitignore  CMakeLists.txt
cpp/custom_containers/tests/basic_double_linked_list/: add_link_to_list.tests.cpp  headers.hpp  list_is_empty_initially.tests.cpp  loop_list_links.tests.cpp  loop_list_links_and_reset.tests.cpp  remove_link_from_list.tests.cpp  reset_link.tests.cpp  reset_list.tests.cpp  swap_two_links_from_same_list.tests.cpp
cpp/custom_containers/tests/dynamic_heap_array/: allocations.cpp  emplace_back.cpp  headers.hpp  push_back__by_ref.cpp  push_back__by_rvalue.cpp
cpp/custom_containers/tests/static_array_tests/: allocations.cpp  data_access.cpp  headers.hpp  iterators.cpp  sort.cpp
cpp/custom_containers/tests/utils/generic_array_container_commons/: common.tests.cpp  common.tests.hpp
cpp/custom_containers/tests/weak_ref_data_pool/: acquire_weak_ref.cpp  filter.cpp  find_if.cpp  for_each.cpp  headers.hpp  miscellaneous.cpp  multiple_weak_ref.cpp  release_weak_ref.cpp  remove_unreferenced_items.cpp  usecase1.cpp
cpp/dear-imgui-test/: sh_run.sh
cpp/embedded-lua/: .gitignore  sh_run.sh
cpp/embedded-lua/src/: hello1.cpp  hello2.cpp  hello3.cpp  hello3.lua
cpp/extended-recursive-least-square/: .gitignore  CMakeLists.txt  _TODOLIST.txt  sh_run.sh
cpp/extended-recursive-least-square/src/: Clock.cpp  Clock.hpp  ExtenderRecursiveLeastSquareMatrix.cpp  ExtenderRecursiveLeastSquareMatrix.hpp  ExtenderRecursiveLeastSquareTrainer.cpp  ExtenderRecursiveLeastSquareTrainer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  asValue.hpp  clamp.cpp  clamp.hpp  main.cpp
cpp/extended-recursive-least-square/src/utils/: Clock.cpp  Clock.hpp  asValue.hpp  clamp.cpp  clamp.hpp
cpp/multithreading/: Makefile  sh_run.sh
cpp/multithreading/src/: main.cpp
cpp/network/: Makefile  _TODOLIST.txt
cpp/network/src/: main.cpp
cpp/open_and_write_files/: Makefile
cpp/open_and_write_files/src/: main.cpp
cpp/regexp/: Makefile  sh_build.sh
cpp/templates_variadics/: Makefile  sh_run.sh
cpp/tests/: sh_run.sh
multithreading/: Makefile
multithreading/src/: main.cpp
network/: sh_run.sh
network/src/: main.cpp
nodejs_callstack/src/: main.ts
tests/: Makefile
tests/src/: test_arrays.hpp  test_my_vector.cpp  test_regex.hpp  test_variadics.cpp
ts/ajv/: package-lock.json  package.json
ts/bm25/: README.md  package.json  sh_run.sh
ts/callstack/: package-lock.json  package.json  sh_run.sh  tsconfig.json
ts/neural_net_basic/: mlp-back-propagation.ts  mlp-genetic-algorithm.ts
ts/pew-pew-pew/: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json
ts/rabbitmq/: _TODOLIST.txt  package-lock.json  package.json  sh_run.sh  tsconfig.json
ts/sequelize/: README.md  package-lock.json  package.json  sh_run.sh
ts/task/: TaskSubProcess.ts
zen-c/some-gl-test/: .gitignore  sh_run.sh
(+111 files in other folders)
